src/shared/styles/global.scss
@use "reset.scss";
@use "variables.scss";
@use "post-content.scss";

@tailwind base;
@tailwind components;
@tailwind utilities;

// @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
// @import url("https://fonts.googleapis.com/css2?family=Montserrat+Alternates:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap");

@font-face {
  font-family: "TT Runs Trial";
  src: url("/fonts/TT Runs Trial Variable Roman.ttf") format("truetype");
}

:root {
  // background: rgba(71, 114, 230, 1);
}

body {
  font-family:
    "TT Runs Trial", "Montserrat Alternates", "Montserrat", sans-serif;

  &::-webkit-scrollbar {
    display: none;
  }

  &::-webkit-scrollbar-thumb {
    display: none;
  }
}

.user_main {
  padding-top: calc(var(--header-height-xl) + 20px);
  min-height: 100svh;

  @media (max-width: 992px) {
    padding-top: calc(var(--header-height-lg) + 20px);
  }

  @media (max-width: 768px) {
    padding-top: calc(var(--header-height-lg));
  }

  @media (max-width: 576px) {
    padding-top: calc(var(--header-height-sm));
  }

  @media (max-width: 375px) {
    padding-top: calc(var(--header-height-xs));
  }
}

.main_font {
  font-family: "TT Runs Trial";
}

.button {
  display: grid;
  grid-auto-flow: column;
  column-gap: 10px;
  justify-content: center;
  align-items: center;
  align-content: center;

  font-size: 14px;
  font-style: normal;
  font-weight: 500;
  line-height: normal;
  width: 100%;

  padding: 10px 20px 10px 20px;
  cursor: pointer;
  border-radius: 12px;

  &__blue {
    color: var(--Personal-colors-White);
    background: var(--primary-gradient);

    &:hover {
      background: #005aa5;
    }
  }

  &__white {
    color: var(--Personal-colors-main);
    border: 1px solid var(--Personal-colors-main);
    background: #fff;

    &:hover {
      background: rgb(237, 237, 237);
    }
  }

  &__orange {
    color: var(--Personal-colors-White);
    background: var(--Gradients-Gradient-2);

    &:hover {
      background: var(--Gradients-Gradient-2);
    }
  }

  &__green {
    color: var(--Personal-colors-White);
    background: var(--Personal-colors-Green);
  }

  &__yellow {
    color: var(--Personal-colors-White);
    background: var(--Orange);

    &:hover {
      background: var(--Orange);
    }
  }
}

.main_layout {
  display: flex;
  flex-direction: column;
  min-height: calc(calc(var(--vh) * 100) - 80px);
  width: 100vw;

  // background: url("/images/rootBg/desktopBG.png") repeat top center;
  // background-size: cover;

  // @media (max-width: 992px) {
  //   background: url("/images/rootBg/tabletBG.png") repeat top center;
  // }

  // @media (max-width: 576px) {
  //   background: url("/images/rootBg/mobileBG.png") repeat top center;
  // }

  header,
  footer {
    flex-shrink: 0;
  }

  main {
    flex-grow: 1;
    // overflow-y: auto;
    // backdrop-filter: blur(20px);
  }
}

.main_background {
  position: relative;

  &::before {
    background: #fefcff;
    content: "";
    position: absolute;
    inset: 0;
    z-index: -1;
    opacity: 0.2; // теперь opacity только на градиент
    background-image:
      radial-gradient(
        circle at 10% 80%,
        var(--Personal-colors-main),
        transparent 20%
      ),
      radial-gradient(
        circle at 80% 10%,
        var(--Personal-colors-main2),
        transparent 20%
      );

    @media (max-width: 992px) {
      opacity: 0.15;
      background-image:
        radial-gradient(
          circle at 10% 80%,
          var(--Personal-colors-main),
          transparent 20%
        ),
        radial-gradient(
          circle at 95% 20%,
          var(--Personal-colors-main2),
          transparent 20%
        );
    }
  }
}

.admin_panel_layout {
  display: flex;
  flex-direction: column;
  min-height: calc((var(--vh) * 100));
  width: 100vw;
  padding-left: var(--sidebar-admin-xl);

  header,
  footer {
    flex-shrink: 0;
  }

  main {
    flex-grow: 1;
  }
}

.overlay {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  pointer-events: none;
  z-index: var(--modal-z-index - 1);
}

.container {
  max-width: var(--container-width);
  padding: 0 70px;
  margin: 0 auto;

  @media (max-width: 1080px) {
    padding: 0 var(--container-padding-xl-side);
  }

  @media (max-width: 992px) {
    // max-width: var(--breakpoint-lg);
    padding: 0 var(--container-padding-lg-side);
  }

  @media (max-width: 768px) {
    // max-width: var(--breakpoint-md);
    padding: 0 var(--container-padding-md-side);
  }

  @media (max-width: 576px) {
    // max-width: var(--breakpoint-sm);
    padding: 0 var(--container-padding-sm-side);
    // padding: 0 var(--container-padding-xs-side);
  }

  @media (max-width: 375px) {
    // max-width: var(--breakpoint-xs);
    padding: 0 var(--container-padding-xs-side);
  }
}

.layout {
  background: var(--primary-gradient);
}

.sidebar {
  @media (min-width: 1081px) {
    padding-left: 80px;
  }
}

.shake__animation {
  animation:
    slideInFromRight 0.1s ease-in-out forwards,
    shake 0.3s ease-in-out 0.1s forwards;
}

@keyframes slideInFromRight {
  from {
    transform: translateX(100%);
  }

  to {
    transform: translateX(0);
  }
}

@keyframes shake {
  0% {
    transform: translateX(0);
  }

  25% {
    transform: translateX(-15px);
  }

  50% {
    transform: translateX(15px);
  }

  100% {
    transform: translateX(0);
  }
}
/* ... */

